--- a/lang_school/main/static/main/css/base.css
+++ b/lang_school/main/static/main/css/base.css
@@ -7,9 +7,11 @@
     --color-creme: #eec8a5;
     --color-brown-dark: #693909;
     --color-brown-darker: #371805;
+
+    
 }
 
 body {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: var(--color-white-warm);
 }
