--- a/lang_school/exercises_words/templates/exercises_words/exercise_step_3.html
+++ b/lang_school/exercises_words/templates/exercises_words/exercise_step_3.html
@@ -8,23 +8,23 @@
 
 {% block 'content' %}
 
-    <div class="row">
-        <div class="col">
-            <h2 class='text-center'>Расставь по местам</h2>
+    <div class="row py-3 justify-content-center">
+        <div class="col-12 title ramka-6 w-50">
+            <h2 class='title'>Расставь по местам</h2>
             {% csrf_token %}
-            <div class='row justify-content-center'>
-                <div class='col text-center'>
-                    <button id='btn-send' type='submit' class='btn btn-warning hidden'>Закончить этап и отправить данные</button>
-                </div>
+        </div>
+        <div class='row justify-content-center'>
+            <div class='col text-center'>
+                <button id='btn-send' type='submit' class='btn btn-warning hidden'>Закончить этап и отправить данные</button>
             </div>
         </div>
     </div>
 
-    <div class="row row-cols-2 justify-content-center text-center">
+    <div class="row row-cols-2 justify-content-center words__place">
         <div class="col-1">
             <ul id='words-list' class='words__list'>
                 {% for word in words %}
-                    <li id='word_{{word.id}}'>{{ word.word }}</li>
+                    <li id='word_{{word.id}}' class="word__item"> {{ word.word }}</li>
                 {% endfor %}
             </ul>
         </div>
@@ -39,7 +39,7 @@
 
     <div class="row row-cols-2 justify-content-center text-center">
         <div class="col-1">
-            <button id='btn-answer' class='btn btn-warning'>Проверить</button>
+            <button id='btn-answer' class='btn btn__check'>Проверить</button>
         </div>
     </div>
 
