--- a/lang_school/exercises_words/templates/exercises_words/exercise_step_4.html
+++ b/lang_school/exercises_words/templates/exercises_words/exercise_step_4.html
@@ -8,51 +8,54 @@
 
 {% block 'content' %}
     <!-- Title -->
-    <div class="row rows-col-1">
-        <div class="col">
-            <h2 class='text-center'>Напиши перевод</h2>
+    <div class="row py-3 justify-content-center">
+        <div class="col-12 title ramka-6 w-50">
+            <h2 class='title'>Напиши перевод</h2>
+            {% csrf_token %}
+        </div>
             <div class='row justify-content-center'>
                 <div class='col text-center'>
                     <button id='send-btn' type='submit' class='btn btn-warning hidden'>Закончить этап и отправить данные</button>
                 </div>
             </div>
             <!-- Alerts-->
-            <div class='row justify-content-center pt-3'>
-                <div class='col-3'>
+            <div class='row justify-content-center'>
+                <div class='col-3 pt-3 hidden'>
                     <div class='alerts pt-3'>
-                        <div id='alert-done' class="alert alert-success text-center hidden" role="alert">
+                        <div id='alert-done' class="alert alert-success text-center" role="alert">
                             Упражнение завершено!
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Done button -->
-            <div class='row justify-content-center pt-3'>
-                <div class='col-3'>
+            <div class='row justify-content-center '>
+                <div class='col-3 pt-3 hidden'>
                     <form action="/users/profile" method="post" class='text-center'>
                         {% csrf_token %}
-                        <button id='done-btn' type='submit' class='btn btn-success hidden'>Вернуться в Личный кабинет</button>
+                        <button id='done-btn' type='submit' class='btn btn-success'>Вернуться в Личный кабинет</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="row row-cols-1 justify-content-center text-center">
-        <div class="col">
-            {% for word in words %}
-                <div id="word_check_{{word.id}}" class="word_check hidden">
-                    <p> {{ word.word }} </p>
-                    <input id='{{word.translate}}' type="text" name="translate" placeholder='"{{word.word}}" переводится как...'>
+    <div class="row row-cols-1 justify-content-center text-center ">
+        {% for word in words %}
+            <div class="col hidden">
+
+                <div id="word_check_{{word.id}}" class="word_check ">
+                    <p class="word-translate"> {{ word.translate }} </p>
+                    <input id='{{word.word}}' type="text" name="translate" placeholder='"{{word.translate}}" переводится как...' class="word__check">
                 </div>
-            {% endfor %}
-            <button id="btn-check" class="btn btn-warning">Проверить</button>
-        </div>
+            </div>
+        {% endfor %}
+        <button id="btn-check" class="btn btn__check">Проверить</button>
     </div>
 
     <!-- Alerts-->
-    <div class='row justify-content-center pt-3'>
-        <div class='col-3'>
+    <div class='row justify-content-center  '>
+        <div class='col-3  '>
             <div class='alerts pt-3'>
                 <div id='alert-success' class="alert alert-success text-center hidden" role="alert">
                     Верно! Так держать!
