--- a/lang_school/main/templates/main/index.html
+++ b/lang_school/main/templates/main/index.html
@@ -55,7 +55,7 @@
             <img src="{% static 'main/images/french.png' %}" class="d-block w-100" alt="Third Slide Image">
             <div class="card-body d-flex flex-column justify-content-start">
               <h5 class="card-title align-self-start">French course</h5>
-              <p class="card-text">Французский - язык любви, изящности и культуры. Любое предложение сможет зазвучать из ваших уст как романтическая баллада. Благодаря этому языку вы сможете погрузиться в богатство французской литературы, моды и исскуства Франции. Учите и одновременно наслаждайтесь красотой этого языка! </p>
+              <p class="card-text">Французский - язык любви, изящности и искусства. Его изучение поможет вам погрузиться в богатую культуру и историю Франции. Французский язык также является одним из официальных языков многих международных организаций, что делает его полезным для карьерного роста и профессиональной деятельности.</p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
               <span>66 учеников</span>
@@ -68,7 +68,7 @@
             <img src="{% static 'main/images/spanish.png' %}" class="d-block w-100" alt="Third Slide Image">
             <div class="card-body d-flex flex-column justify-content-start">
               <h5 class="card-title align-self-start">Spanish course</h5>
-              <p class="card-text">Испанский - третий по популярности язык в мире. В этом языке 60% англо-саксонских корней и он необыкновенно прост в изучении. Знание этого языка открывает вам доступ ко многим испаноязычным странам: Мексике, Аргентине, Кубе, Колумбии, Чили и другим! </p>
+              <p class="card-text">Испанский - третий по популярности язык в мире. В этом языке 60% англо-саксонских корней и он достаточно прост в изучении. Знание этого языка открывает вам доступ ко многим испаноязычным странам: Мексике, Аргентине, Кубе, Колумбии, Чили и другим! </p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
               <span>30 учеников</span>
@@ -81,7 +81,7 @@
   </div>
 
   <!-- Blog -->
-  {% comment %} <div class="container py-4 text-start">
+  <div class="container py-4 text-start">
     <h2 class="featurette-heading pb-3 fw-normal lh-1 text-center">Блог</h2>
     <div class="row mb-2">
       <div class="col-md-6 align-self-right">
@@ -119,7 +119,7 @@
         </div>
       </div>
     </div>
-  </div> {% endcomment %}
+  </div>
       
   <!-- Reviews -->
   <div class="container reviews-container">
@@ -168,7 +168,7 @@
   </div>
 
   <!-- State -->
-  <div class="container py-2 text-center state-container">
+  {% comment %} <div class="container py-2 text-center state-container">
     <h2 class="featurette-heading py-3 fw-normal lh-1">Штат</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 justify-content-center">
       <div class="col-xl-4 col-md-12 align-self-center">
@@ -208,5 +208,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> {% endcomment %}
 {% endblock content %}
