--- a/lang_school/exercises_words/static/css/exercise.css
+++ b/lang_school/exercises_words/static/css/exercise.css
@@ -61,18 +61,63 @@ div.title {
   color: white;
 }
 
-.word-main {
-  font-size: 48px;
+.words {
+  color: white;
+  font-size: 30px;
   font-style: initial;
+  /* padding: 50px 50px 50px 50px; */
 }
 
-.word-main-mask {
-  -webkit-mask-image: url('../images/word_place.svg');
+.word_word__col {
+  background-image: url('../images/puzzle_left.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 30px 0px 30px 0px;
+}
+
+.word_translate__col {
+  background-image: url('../images/puzzle_right.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 30px 0px 30px 0px;
+}
+
+.step_one__word_word {
+  
+
+  text-align: center;
+  padding: 15px 0px 15px 0px;
+  margin: 0;
+  /* font-size: 2vw; */
+}
+
+.step_one__word_translate {
+  
+
+  text-align: center;
+  padding: 15px 0px 15px 0px;
+  margin: 0;
+  /* font-size: 2vw; */
+
+}
+
+/* .word-main-mask {
+  -webkit-mask-image: url('../images/puzzles.png');
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-size: contain;
   -webkit-mask-position: center;
   background-color: var(--color-ex-violet-max-pale);
-}
+  padding: 30px 0px 30px 0px;
+} */
+
+/* .word-main-mask {
+  background-image: url('../images/puzzles.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+} */
 
 .word-card {
   font-size: 20px;
@@ -141,10 +186,11 @@ li {
 }
 
 .word__item {
-  width: max-content;
+  width: 150px;
+  /* margin-right: 50px; */
   margin-bottom: 10px;
   padding: 15px;
-  text-align: end;
+  text-align: center;
   border: 2px solid var(--color-ex-violet-dark);
   border-radius: 10px;
   background-color: var(--color-ex-violet-pale);
@@ -153,7 +199,7 @@ li {
 }
 
 .translate__item {
-  width: max-content;
+  width: 150px;
   margin-bottom: 10px;
   padding: 15px;
   text-align: center;
