--- a/lang_school/exercises_words/templates/exercises_words/base.html
+++ b/lang_school/exercises_words/templates/exercises_words/base.html
@@ -23,34 +23,40 @@
           <li class="nav-item p-2">
             <a id='step_1' class="nav-link {% if step == 1 %}active step-active {% elif step > 1 %} step-complete {% else %} step-future {% endif %} disabled" aria-disabled="true">
               {% if step == 1 %}
-                > Step 1 <
-              {% else %}
+                → Step 1 ←
+              {% elif step > 1 %}
                 Step 1 ✔
-              {% endif %}
-            </a>
-          </li>
-          <li class="nav-item p-2">
-            <a id='step_2' class="nav-link {% if step == 2 %}active step-active{% else %}step-future{% endif %} disabled" href={% url "exercises_words" id=id step=2 %} aria-disabled="true">
-              {% if step == 2 %}
-              → Step 2 ←
               {% else %}
-                Step 2
+                Step 1
               {% endif %}
             </a>
           </li>
           <li class="nav-item p-2">
-            <a id='step_3' class="nav-link {% if step == 3 %}active step-active{% else %}step-future{% endif %} disabled" href={% url "exercises_words" id=id step=3 %} aria-disabled="true">
+            <a id='step_2' class="nav-link {% if step == 2 %}active step-active {% elif step > 2 %} step-complete {% else %} step-future {% endif %} disabled" href={% url "exercises_words" id=id step=2 %} aria-disabled="true">
+              {% if step == 2 %}
+                → Step 2 ←
+              {% elif step > 2 %}
+                Step 2 ✔
+              {% else %}
+                Step 2 
+              {% endif %}
+            </a>
+          </li>
+          <li class="nav-item p-2">
+            <a id='step_3' class="nav-link {% if step == 3 %}active step-active {% elif step > 3 %} step-complete {% else %} step-future {% endif %} disabled" href={% url "exercises_words" id=id step=3 %} aria-disabled="true">
               {% if step == 3 %}
-                > Step 3 <
+                → Step 3 ←
+              {% elif step > 3 %}
+                Step 3 ✔
               {% else %}
                 Step 3
               {% endif %}
             </a>
           </li>
           <li class="nav-item p-2">
-            <a id='step_4' class="nav-link {% if step == 4 %}active step-active{% else %}step-future{% endif %} disabled" href={% url "exercises_words" id=id step=4 %} aria-disabled="true">
+            <a id='step_4' class="nav-link {% if step == 4 %}active step-active {% else %} step-future {% endif %} disabled" href={% url "exercises_words" id=id step=4 %} aria-disabled="true">
               {% if step == 4 %}
-                > Step 4 <
+                → Step 4 ←
               {% else %}
                 Step 4
               {% endif %}
