--- a/lang_school/exercises_words/templates/exercises_words/exercise_step_3.html
+++ b/lang_school/exercises_words/templates/exercises_words/exercise_step_3.html
@@ -20,15 +20,15 @@
         </div>
     </div>
 
-    <div class="row row-cols-2 justify-content-center words__place">
-        <div class="col-1">
+    <div class="row justify-content-center words__place">
+        <div class="col-2">
             <ul id='words-list' class='words__list'>
                 {% for word in words %}
                     <li id='word_{{word.id}}' class="word__item"> {{ word.word }}</li>
                 {% endfor %}
             </ul>
         </div>
-        <div class="col-1">
+        <div class="col-2">
             <ul id='trans-list' class="translate__list">
                 {% for trans_word in shuffled_translates %}
                     <li id='translate_{{ trans_word.id }}' class="translate__item">{{ trans_word.trans }}</li>
@@ -36,6 +36,7 @@
             </ul>
         </div>
     </div>
+    
 
     <div class="row row-cols-2 justify-content-center text-center">
         <div class="col-1">
