--- a/lang_school/main/static/main/css/index.css
+++ b/lang_school/main/static/main/css/index.css
@@ -1,11 +1,11 @@
 .btn {
     color: white;
-    background-color: var(--color-brown);
-    border: var(--color-brown-dark) solid 1px;
+    background-color: var(--color-ex-violet-dark);
+    border: var(--color-ex-violet-darker) solid 1px;
 }
 
 .btn:hover {
-    background-color: var(--color-brown-pale);
+    background-color: var(--color-ex-violet-paler);
 }
 
 a {
@@ -13,67 +13,71 @@ a {
     text-decoration: none;
 }
 
-/* a.dropdown-toggle:active {
-    color: var(--color-brown-paler)
-} */
-
-.preview-container {
-    /* background-color: var(--color-1-pale); */
-}
-
 .preview-header {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    border: var(--color-brown-dark) solid 10px;
+    border: var(--color-ex-violet-dark) solid 10px;
+    border-radius: 5px;
 }
 
 .preview-header-text-main {
-    color: var(--color-brown-darker);
+    color: var(--color-ex-violet-darker);
     font-weight: bold;
     letter-spacing: 2px;
 }
 
 .preview-header-text-secondary {
+    color: var(--color-ex-violet-darker);
     font-weight: bold;
 }
 
-.preview-text {
-    /* background-color: var(--color-1-pale); */
-}
-
 .carousel-caption {
-    background-color: var(--color-brown-pale);
+    background-color: var(--color-ex-violet-max-pale);
+    border-radius: 5px;
 }
 
 .carousel-control-prev, .carousel-control-next {
-    background-color: var(--color-brown);
+    background-color: var(--color-ex-violet-pale);
+}
+
+.carousel-header {
+    font-weight: bolder;
+    color: var(--color-ex-violet-darker);
+}
+
+.carousel-text {
+    color: var(--color-ex-violet-darker);
 }
 
 .card {
     background-color: white;
-    border: var(--color-brown-paler) solid 1px;
+    border: var(--color-ex-violet-paler) solid 1px;
 }
 
 .card-title {
     font-weight: bold;
-    color: var(--color-brown-darker);
+    color: var(--color-ex-violet-darker);
 }
-
 
 .card-footer {
-    background-color: var(--color-creme);
-    border-top: var(--color-brown-paler) solid 1px;
+    background-color: var(--color-ex-violet-max-pale);
+    border-top: var(--color-ex-violet-darker) solid 1px;
 }
 
-.card-btn {
-    background-color: var(--color-brown);
-    color: white;
-    border-color: var(--color-brown-darker);
+.blog-card {
+    background-color: var(--color-ex-violet-max-pale);
+    border: var(--color-ex-violet-dark) solid 1px !important; 
 }
 
-.card-btn:hover {
-    background-color: var(--color-brown-pale);
-    color: black;
-    border-color: var(--color-brown-darker);
+.blog-theme {
+    color: var(--color-ex-violet-darker);
+}
+
+.blog-date {
+    color: var(--color-ex-violet-pale);
+}
+
+.blog-link:hover {
+    color: var(--color-ex-violet-dark)
 }
 
 /* .reviews-container {
@@ -88,6 +92,16 @@ a {
 .review-card-not-even {
     background-color: var(--color-brown-paler);
 } */
+
+.review-hr {
+    color: var(--color-ex-violet-darker)
+}
+
+.review-card {
+    background-color: var(--color-ex-violet-max-pale);
+    border: var(--color-ex-violet-dark) solid 1px !important;
+    border-radius: 10px;
+}
 
 .state-container {
     /* background-color: var(--color-main-3-pastel); */
