--- a/lang_school/main/templates/main/carousel.html
+++ b/lang_school/main/templates/main/carousel.html
@@ -11,22 +11,22 @@
         <div class="carousel-item active">
             <img src="{% static 'main/images/solo_learn.png' %}" class="d-block w-100" alt="First Slide Image">
             <div class="carousel-caption d-none d-md-block mx-3">
-                <h5>Индивидуальные занятия</h5>
-                <p>{% lorem 15 w random %}</p>
+                <h5 class='carousel-header'>Индивидуальные занятия</h5>
+                <p class='carousel-text px-3'>Подразумевают личностно-ориентированный подход, программа строится с учётом ваших предпочтений. Главное преимущество этого формата - продуктивность.</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="{% static 'main/images/group_learn.png' %}" class="d-block w-100" alt="Second Slide Image">
             <div class="carousel-caption d-none d-md-block mx-3">
                 <h5>Групповые занятия</h5>
-                <p>{% lorem 15 w random %}</p>
+                <p class='px-3'>Помимо получения новой информации и развития коммуникационных навыков, позволяет постигать мир в компании единомышленников.</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="{% static 'main/images/remote_learn.png' %}" class="d-block w-100" alt="Third Slide Image">
             <div class="carousel-caption d-none d-md-block mx-3">
-                <h5>Удаленный формат</h5>
-                <p>{% lorem 15 w random %}</p>
+                <h5>Онлайн</h5>
+                <p class='px-3'>Для любящих родные стены и ценящих каждую минуту своего времени этот формат подходит идеально.</p>
             </div>
         </div>
         </div>
