--- a/lang_school/users/templates/users/profile.html
+++ b/lang_school/users/templates/users/profile.html
@@ -12,16 +12,16 @@
 {% endblock  %}
 
 {% block content %}
-<div class="container page pt-3">
-	<ul class="nav nav-tabs" id="myTab" role="tablist">
+<div class="container page">
+	<ul class="nav nav-tabs profile-nav-tabs" id="myTab" role="tablist">
 		<li class="nav-item profile-nav-item" role="presentation">
-		  <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#services-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Сервисы</button>
+		  <button class="nav-link active profile-nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#services-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Сервисы</button>
 		</li>
 		<li class="nav-item profile-nav-item" role="presentation">
-		  <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Профиль</button>
+		  <button class="nav-link profile-nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Профиль</button>
 		</li>
 		<li class="nav-item profile-nav-item" role="presentation">
-		  <button class="nav-link disabled-nav-item" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false" disabled>To be continued...</button>
+		  <button class="nav-link profile-nav-link disabled-nav-item" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false" disabled>To be continued...</button>
 		</li>
 	  </ul>
 	  <div class="tab-content" id="myTabContent">
