--- a/lang_school/exercises_words/templates/exercises_words/exercise_step_1.html
+++ b/lang_school/exercises_words/templates/exercises_words/exercise_step_1.html
@@ -10,8 +10,9 @@
 {% block 'content' %}
     <!-- Header -->
     <div class="row justify-content-center">
-        <div class="col-12 title ramka-6 w-50">
+        <div class="col-12 title ramka-6 w-50 header">
             <h2 class='title'>Запоминаем</h2>
+            <button type="button" class="btn btn-lg" data-bs-toggle="popover" data-bs-html="true" data-bs-title='Упражнение "Запоминаем"' data-bs-content="1. Step one.<br> 2. Step two." ><i class="bi bi-question-circle"></i></button>
             {% csrf_token %}
         </div>
     </div>
