--- a/lang_school/main/static/main/css/base.css
+++ b/lang_school/main/static/main/css/base.css
@@ -15,19 +15,27 @@
     --color-ex-violet-pale: #AF3BD4;
     --color-ex-violet-paler: #B964D4;
     --color-ex-violet-max-pale: #D9A6EA; */
-
-    --color-ex-violet-main: #A17DD0;
-    --color-ex-violet-dark: #816D9C;
-    --color-ex-violet-darker: #512987;
-    --color-ex-violet-pale: #C0A2E8;
-    --color-ex-violet-paler: #CBB5E8;
-    --color-ex-violet-max-pale: #F2F0F1;
     
-    --color-violet-pastel-main: #B299D3;
-    --color-violet-pastel-dark: #8C7E9E;
-    --color-violet-pastel-darker: #573289;
-    --color-violet-pastel-pale: #CEB9E9;
-    --color-violet-pastel-paler: #D5C6E9;
+    --color-violet-pastel-main: #A17DD0;
+    --color-violet-pastel-dark: #816D9C;
+    --color-violet-pastel-darker: #512987;
+    --color-violet-pastel-pale: #C0A2E8;
+    --color-violet-pastel-paler: #CBB5E8;
+    --color-violet-pastel-max-pale: #E3D6F3;
+
+    --color-pink-pastel-main: #CC73CC;
+    --color-pink-pastel-dark: #996799;
+    --color-pink-pastel-darker: #852585;
+    --color-pink-pastel-pale: #E59AE5;
+    --color-pink-pastel-paler: #E5AEE5;
+    --color-pink-pastel-max-pale: #F2D2F2;
+
+    --color-blue-pastel-main: #8585D3;
+    --color-blue-pastel-dark: #72729E;
+    --color-blue-pastel-darker: #2B2B89;
+    --color-blue-pastel-pale: #A8A8E9;
+    --color-blue-pastel-paler: #BABAE9;
+    --color-blue-pastel-max-pale: #D9D9F4;
 }
 
 body {
