--- a/lang_school/main/static/main/css/index.css
+++ b/lang_school/main/static/main/css/index.css
@@ -1,11 +1,14 @@
 .btn {
+    width: max-content;
     color: white;
-    background-color: var(--color-ex-violet-dark);
-    border: var(--color-ex-violet-darker) solid 1px;
+    background-color: var(--color-violet-pastel-dark);
+    border: var(--color-violet-pastel-darker) solid 1px;
 }
 
 .btn:hover {
-    background-color: var(--color-ex-violet-paler);
+    color: black !important;
+    background-color: var(--color-violet-pastel-paler);
+    border-color: var(--color-violet-pastel-darker);
 }
 
 a {
@@ -15,69 +18,69 @@ a {
 
 .preview-header {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    border: var(--color-ex-violet-dark) solid 10px;
+    border: var(--color-violet-pastel-dark) solid 10px;
     border-radius: 5px;
 }
 
 .preview-header-text-main {
-    color: var(--color-ex-violet-darker);
+    color: var(--color-violet-pastel-darker);
     font-weight: bold;
     letter-spacing: 2px;
 }
 
 .preview-header-text-secondary {
-    color: var(--color-ex-violet-darker);
+    color: var(--color-violet-pastel-darker);
     font-weight: bold;
 }
 
 .carousel-caption {
-    background-color: var(--color-ex-violet-max-pale);
+    background-color: var(--color-blue-pastel-max-pale);
     border-radius: 5px;
 }
 
 .carousel-control-prev, .carousel-control-next {
-    background-color: var(--color-ex-violet-pale);
+    background-color: var(--color-blue-pastel-pale);
 }
 
 .carousel-header {
     font-weight: bolder;
-    color: var(--color-ex-violet-darker);
+    color: var(--color-blue-pastel-darker);
 }
 
 .carousel-text {
-    color: var(--color-ex-violet-darker);
+    color: var(--color-blue-pastel-darker);
 }
 
 .card {
     background-color: white;
-    border: var(--color-ex-violet-paler) solid 1px;
+    border: var(--color-blue-pastel-paler) solid 1px;
 }
 
 .card-title {
     font-weight: bold;
-    color: var(--color-ex-violet-darker);
+    color: var(--color-violet-pastel-darker);
 }
 
 .card-footer {
-    background-color: var(--color-ex-violet-max-pale);
-    border-top: var(--color-ex-violet-darker) solid 1px;
+    background-color: var(--color-pink-pastel-max-pale);
+    border-top: var(--color-blue-pastel-darker) solid 1px;
 }
 
 .blog-card {
-    background-color: var(--color-ex-violet-max-pale);
-    border: var(--color-ex-violet-dark) solid 1px !important; 
+    background-color: var(--color-blue-pastel-max-pale);
+    border: var(--color-violet-pastel-dark) solid 1px !important; 
 }
 
 .blog-theme {
-    color: var(--color-ex-violet-darker);
+    color: var(--color-violet-pastel-darker);
 }
 
 .blog-date {
-    color: var(--color-ex-violet-pale);
+    color: var(--color-violet-pastel-pale);
 }
 
 .blog-link:hover {
-    color: var(--color-ex-violet-dark)
+    color: var(--color-violet-pastel-dark)
 }
 
 /* .reviews-container {
@@ -94,12 +97,12 @@ a {
 } */
 
 .review-hr {
-    color: var(--color-ex-violet-darker)
+    color: var(--color-blue-pastel-darker)
 }
 
 .review-card {
-    background-color: var(--color-ex-violet-max-pale);
-    border: var(--color-ex-violet-dark) solid 1px !important;
+    background-color: var(--color-blue-pastel-max-pale);
+    border: var(--color-violet-pastel-darker) solid 1px  ;
     border-radius: 10px;
 }
 
