--- a/lang_school/main/static/main/css/navbar.css
+++ b/lang_school/main/static/main/css/navbar.css
@@ -1,6 +1,6 @@
 nav {
-    background-color: var(--color-ex-violet-dark);
-    border-bottom: 1px solid var(--color-ex-violet-darker);
+    background-color: var(--color-violet-pastel-dark);
+    border-bottom: 1px solid var(--color-violet-pastel-darker);
 }
 
 .nav-link {
@@ -9,21 +9,21 @@ nav {
 }
 
 .navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
-    color: var(--color-ex-violet-paler);
+    color: var(--color-violet-pastel-paler);
 }
 
 .nav-link:hover {
-    color: var(--color-ex-violet-max-pale);
+    color: var(--color-violet-pastel-max-pale);
 }
 
 .dropdown-menu {
-    border-color: var(--color-ex-violet-dark);
-    background-color: var(--color-ex-violet-pale);}
+    border-color: var(--color-violet-pastel-dark);
+    background-color: var(--color-violet-pastel-pale);}
 
 .dropdown-item {
     color: white;
 }
 
 .dropdown-item:hover {
-    background-color: var(--color-ex-violet-max-pale);
+    background-color: var(--color-violet-pastel-max-pale);
 }
